--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]+)?" minlength="2" maxlength="20" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]+)?$" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="[A-Za-z-]+@[A-Za-z-]+\.\w+" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="^[A-Za-z-\._\d]{2,}@[A-Za-z-]{2,}(\.\w{2,})+$" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="\+?\d{1}\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}" minlength="" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="^(\+\d\(\d{3}\)\s?\d{3}(-\d{2}){2})|((\+\d\s\d{3}-\d{3}-\d{2}-\d{2})|(((\+7)|^8)\d{10}))$" minlength="" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="(https:\/\/|http:\/\/)(www\.)?((\d{3}\.\d{3}\.\d{3}\.\d{3})|(.+\.[a-z]+))(:\d{2,5})?[a-zA-Z0-9/-]+" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^https?:\/\/(www\.)?((\d{1,3}(\.\d{1,3}){3})|([a-z]{2,}(\.[a-z]{2,}){2,}))(:\d{2,5})?([a-z0-9\/]{1,})?#?$" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
