--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^https?:\/\/(www\.)?((\d{1,3}(\.\d{1,3}){3})|([a-z]{2,}(\.[a-z]{2,}){2,}))(:\d{2,5})?([a-z0-9\/]{1,})?#?$" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^https?:\/\/(www\.)?((\d{1,3}(\.\d{1,3}){3})|([a-z0-9-]{2,}(\.[a-z]{2,}){1,}))(:\d{2,5})?([a-z0-9\/]{1,})?#?$" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
